--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "owlbot-js": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-transition-group": "^1.2.1"
   },
   "scripts": {
     "predeploy": "npm run build",
